--- a/ai-blogger-server/src/pages/article/[slug].astro
+++ b/ai-blogger-server/src/pages/article/[slug].astro
@@ -2,6 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 import Card from '../../components/Card.astro';
 import { getCollection } from 'astro:content';
+import Disclaimer from "../../components/Disclaimer.astro";
 export async function getStaticPaths() {
     const articles = await getCollection('articles');
     return articles.map((entry) => ({
@@ -21,7 +22,9 @@ const { Content } = await entry.render();
             title="Home"
         />
         <div class="content">
+            <Disclaimer />
             <Content />
+            <Disclaimer />
         </div>
         <Card
             href="/"
